// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table align column should not override cell style 1`] = `
<div class="ant-table-wrapper">
  <div class="ant-spin-nested-loading">
    <!---->
    <div class="ant-spin-container">
      <!---->
      <div class="ant-table">
        <!---->
        <div class="ant-table-container">
          <div class="ant-table-content">
            <table style="table-layout: auto;">
              <colgroup></colgroup>
              <thead class="ant-table-thead">
                <tr>
                  <th class="ant-table-cell" colstart="0" colend="0">
                    <!---->Name
                    <!---->
                  </th>
                  <th class="ant-table-cell" style="text-align: center;" colstart="1" colend="1">
                    <!---->Age
                    <!---->
                  </th>
                </tr>
              </thead>
              <tbody class="ant-table-tbody">
                <!---->
                <tr data-row-key="1" class="ant-table-row ant-table-row-level-0">
                  <td class="ant-table-cell">
                    <!---->
                    <!---->
                    <!---->
                  </td>
                  <td style="color: red; text-align: center;" class="ant-table-cell">
                    <!---->32
                    <!---->
                  </td>
                </tr>
                <!---->
                <tr data-row-key="2" class="ant-table-row ant-table-row-level-0">
                  <td class="ant-table-cell">
                    <!---->
                    <!---->
                    <!---->
                  </td>
                  <td style="color: red; text-align: center;" class="ant-table-cell">
                    <!---->42
                    <!---->
                  </td>
                </tr>
                <!---->
              </tbody>
              <!---->
            </table>
          </div>
        </div>
        <!---->
      </div>
      <ul unselectable="on" class="ant-pagination ant-table-pagination ant-table-pagination-right">
        <!---->
        <li title="Previous Page" class="ant-pagination-prev ant-pagination-disabled" aria-disabled="true"><button class="ant-pagination-item-link" type="button" tabindex="-1" disabled=""><span role="img" aria-label="left" class="anticon anticon-left"><svg focusable="false" class="" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path></svg></span></button></li>
        <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"><a rel="nofollow">1</a></li>
        <li title="Next Page" class="ant-pagination-next ant-pagination-disabled" aria-disabled="true"><button class="ant-pagination-item-link" type="button" tabindex="-1" disabled=""><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></button></li>
        <!---->
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table renders JSX correctly 1`] = `
<div class="ant-table-wrapper">
  <div class="ant-spin-nested-loading">
    <!---->
    <div class="ant-spin-container">
      <!---->
      <div class="ant-table">
        <!---->
        <div class="ant-table-container">
          <div class="ant-table-content">
            <table style="table-layout: auto;">
              <colgroup></colgroup>
              <thead class="ant-table-thead">
                <tr>
                  <th colspan="2" class="ant-table-cell" colstart="0" hassubcolumns="true" colend="1">
                    <!---->Name
                    <!---->
                  </th>
                  <th rowspan="2" class="ant-table-cell" colstart="2" colend="2">
                    <!---->Age
                    <!---->
                  </th>
                </tr>
                <tr>
                  <th class="ant-table-cell" colstart="0" colend="0">
                    <!---->First Name
                    <!---->
                  </th>
                  <th class="ant-table-cell" colstart="1" colend="1">
                    <!---->Last Name
                    <!---->
                  </th>
                </tr>
              </thead>
              <tbody class="ant-table-tbody">
                <!---->
                <tr data-row-key="1" class="ant-table-row ant-table-row-level-0">
                  <td class="ant-table-cell">
                    <!---->John
                    <!---->
                  </td>
                  <td class="ant-table-cell">
                    <!---->Brown
                    <!---->
                  </td>
                  <td class="ant-table-cell">
                    <!---->32
                    <!---->
                  </td>
                </tr>
                <!---->
                <tr data-row-key="2" class="ant-table-row ant-table-row-level-0">
                  <td class="ant-table-cell">
                    <!---->Jim
                    <!---->
                  </td>
                  <td class="ant-table-cell">
                    <!---->Green
                    <!---->
                  </td>
                  <td class="ant-table-cell">
                    <!---->42
                    <!---->
                  </td>
                </tr>
                <!---->
              </tbody>
              <!---->
            </table>
          </div>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;
